exports[`use various parts of svg-edit > check tool_source #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
    ></rect>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_fhpath #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      style="pointer-events:inherit"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_text #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
    >
      AB
    </text>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_clone #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
    >
      AB
    </text>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="136"
      y="107"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      id="svg_2"
    >
      AB
    </text>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_italic #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
    >
      AB
    </text>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="136"
      y="107"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      id="svg_2"
    >
      AB
    </text>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_bold #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
      font-weight="bold"
    >
      AB
    </text>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="136"
      y="107"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      id="svg_2"
    >
      AB
    </text>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check change color #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#ffff00"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
      font-weight="bold"
    >
      AB
    </text>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="136"
      y="107"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      id="svg_2"
    >
      AB
    </text>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_text_anchor_start #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#ffff00"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="start"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
      font-weight="bold"
    >
      AB
    </text>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="136"
      y="107"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      id="svg_2"
    >
      AB
    </text>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_text_anchor_middle #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#ffff00"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
      font-weight="bold"
    >
      AB
    </text>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="136"
      y="107"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      id="svg_2"
    >
      AB
    </text>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_text_anchor_end #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#ffff00"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="end"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
      font-weight="bold"
    >
      AB
    </text>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="136"
      y="107"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      id="svg_2"
    >
      AB
    </text>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_star #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#ffff00"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="end"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
      font-weight="bold"
    >
      AB
    </text>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="136"
      y="107"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      id="svg_2"
    >
      AB
    </text>
    <polygon
      cx="370"
      cy="202"
      id="svg_3"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#ffff00"
      strokecolor="#000000"
      strokewidth="0"
      points="370,135.33333333333331 383.0618944953883,184.02184456944562 433.40376775301024,181.39886704167017 391.13458925100343,208.86704431944327 409.18568348616486,255.93446629166317 370,224.22222222222223 330.81431651383514,255.93446629166317 348.86541074899657,208.86704431944327 306.59623224698976,181.39886704167017 356.9381055046117,184.02184456944562 370,135.33333333333331 383.0618944953883,184.02184456944562 "
      stroke="#000000"
      stroke-width="0"
    >
      <animate
        attributeName="opacity"
        begin="indefinite"
        dur="0.2"
        fill="freeze"
        to="1"
      ></animate>
    </polygon>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_polygon #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      fill-opacity="1"
      stroke-opacity="1"
    ></rect>
    <text
      fill="#ffff00"
      stroke="#000000"
      stroke-width="0"
      x="116"
      y="87"
      id="svg_1"
      font-size="24"
      font-family="Serif"
      text-anchor="end"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      font-=""
      font-weight="bold"
    >
      AB
    </text>
    <text
      fill="#000000"
      stroke="#000000"
      stroke-width="0"
      x="136"
      y="107"
      font-size="24"
      font-family="Serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke-opacity="1"
      id="svg_2"
    >
      AB
    </text>
    <polygon
      cx="370"
      cy="202"
      id="svg_3"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#ffff00"
      strokecolor="#000000"
      strokewidth="0"
      points="370,135.33333333333331 383.0618944953883,184.02184456944562 433.40376775301024,181.39886704167017 391.13458925100343,208.86704431944327 409.18568348616486,255.93446629166317 370,224.22222222222223 330.81431651383514,255.93446629166317 348.86541074899657,208.86704431944327 306.59623224698976,181.39886704167017 356.9381055046117,184.02184456944562 370,135.33333333333331 383.0618944953883,184.02184456944562 "
      stroke="#000000"
      stroke-width="0"
      fill-opacity="1"
      stroke-opacity="1"
    ></polygon>
    <polygon
      cx="420"
      cy="302"
      id="svg_4"
      shape="regularPoly"
      sides="5"
      orient="x"
      edge="80"
      fill="#ffff00"
      strokecolor="#000000"
      strokewidth="5"
      points="488.0520646681632,302 441.02924448476534,366.7213595499958 364.94472318115305,342 364.94472318115305,262 441.02924448476534,237.27864045000422 488.0520646681632,302 "
      stroke="#000000"
      stroke-width="5"
    >
      <animate
        attributeName="opacity"
        begin="indefinite"
        dur="0.2"
        fill="freeze"
        to="1"
      ></animate>
    </polygon>
  </g>
</svg>
`;
